syntax = "proto3";
  import "core/common.proto";
  option go_package = "github.com/torabian/fireback/modules/geo";
  

      
service GeoCountrys {
  rpc GeoCountryActionCreate (GeoCountryEntity) returns (GeoCountryCreateReply) {}
  rpc GeoCountryActionUpdate (GeoCountryEntity) returns (GeoCountryCreateReply) {}

  rpc GeoCountryActionQuery (QueryFilterRequest) returns (GeoCountryQueryReply) {}
  rpc GeoCountryActionGetOne (QueryFilterRequest) returns (GeoCountryReply) {}
  rpc GeoCountryActionRemove (QueryFilterRequest) returns (RemoveReply) {}
}

message GeoCountryCreateReply {
	GeoCountryEntity data  = 1;
	IError error = 2;
}

message GeoCountryReply {
	GeoCountryEntity data = 1;
	IError error = 2;
}

message GeoCountryQueryReply {
	repeated GeoCountryEntity items = 1;
	int64 totalItems = 2;
	int64 itemsPerPage = 3;
	int64 startIndex = 4;
	IError error = 5;
}





 



message GeoCountryEntity {
  optional string visibility = 1; // @tag(yaml:"visibility")
  optional string workspaceId = 2; // @tag(yaml:"workspaceId")
  optional string linkerId = 3; // @tag(yaml:"linkerId")
  optional string parentId = 4; // @tag(yaml:"parentId")
  optional GeoCountryEntity parent = 5; // @tag(yaml:"parent")
  string uniqueId = 6; // @tag(gorm:"primarykey;uniqueId;unique;not null;size:100;" yaml:"uniqueId")
  optional string userId = 7; // @tag(yaml:"userId")
  repeated GeoCountryEntityPolyglot translations = 8; // @tag(gorm:"foreignKey:LinkerId;references:UniqueId" json:"translations")
  optional string status = 10; // @tag(  yaml:"status"  )
  optional string flag = 11; // @tag(  yaml:"flag"  )
  optional string commonName = 12; // @tag(translate:"true"  yaml:"commonName"  )
  optional string officialName = 13; // @tag(translate:"true"  yaml:"officialName"  )
  int64 rank = 14; // @tag(gorm:"type:int;name:rank")
  int64 updated = 15; // @tag(gorm:"autoUpdateTime:nano")
  int64 created = 16; // @tag(gorm:"autoUpdateTime:nano")
  string createdFormatted = 17; // @tag(sql:"-")
  string updatedFormatted = 18; // @tag(sql:"-")


}

/* Because it has translation field, we need a translation table for this */
message GeoCountryEntityPolyglot {
  string linkerId = 1; // @tag(gorm:"uniqueId;not null;size:100;" json:"linkerId" yaml:"linkerId")
  string languageId = 2; // @tag(gorm:"uniqueId;not null;size:100;" json:"languageId" yaml:"languageId")

  string commonName = 3; // @tag(yaml:"commonName" json:"commonName");

  string officialName = 4; // @tag(yaml:"officialName" json:"officialName");

}








